fix(dropdown): preserve spacing for collapsed last group

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -416,6 +416,10 @@
       margin-bottom: 0;
     }
 
+    &.isCollapsed:last-child {
+      margin-bottom: 4px;
+    }
+
     &-header {
       display: flex;
       align-items: stretch;
